--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,22 +3,35 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
+
 
 /*
  * Global layout stuff
  */
 
 body {
-  color: #545149;
-  background-color: #f4f1ec;
-  font-size: 24px;
+    color: #545149;
+    background-color: #f4f1ec;
+    font-size: 24px;
+    font-family: Source Sans Pro, sans-serif;
 }
+
+.container {
+    width: 90%;
+    align-items: center;
+    background-color: #f4f1ec;
+}
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
