--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,18 +6,19 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-top: 120px;
+            margin-top: 130px;
         }
         
         .avatar-name {
             display: flex;
             justify-content: center;
+            color: white;
+            padding: 0px;
         }
         
         .header {
             display: flex;
             flex-direction: column;
-            background-color: #ffdf7f;
-            background-image: url("https://www.transparenttextures.com/patterns/ag-square.png");
-            /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+            background-color: #c7775a;
+            background-image: url("https://www.transparenttextures.com/patterns/skulls.png");
         }
