--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,15 +1,39 @@
+@keyframes blink {
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+    to {
+        opacity: 1;
+        max-height: 500px;
+    }
+}
+
+.new-tweet {
+    animation: blink 1.5s;
+    overflow: hidden;
+}
+
+.tweet-container {
+    margin-top: 30px;
+}
+
+.new_tweet {
+    margin-top: 70px;
+}
+
 .tweet-label {
     align-items: center;
     color: #555;
 }
 
 .tweet-form {
-    padding: 15px;
+    padding: 50px;
 }
 
 #tweet-text {
     width: 100%;
-    height: 2em;
+    height: 3em;
     border: none;
     border-bottom: 4px solid #666;
     background: none;
