Implement automatic scroll top button

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -19,6 +19,6 @@
         .header {
             display: flex;
             flex-direction: column;
-            background-color: #c7775a;
+            background-color: #c48e18;
             background-image: url("https://www.transparenttextures.com/patterns/skulls.png");
         }
