--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,6 +14,24 @@ html {
     box-sizing: inherit;
 }
 
+.floatScroll {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    border-radius: 50%;
+    background-color: red;
+    position: fixed;
+    bottom: 0px;
+    right: 0;
+    z-index: 1000;
+    height: 60px;
+    width: 60px;
+}
+
+.floatScroll img {
+    margin-top: 12px;
+}
+
 
 /*
  * Global layout stuff
